tests/ui/data_enums.stderr
error: enums with data are not allowed
 --> $DIR/data_enums.rs:4:9
  |
4 |         Field(u64),
  |         ^^^^^^^^^^
